Fixing some base layout issues with width

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,14 @@ footer {
 header.masthead {
 	text-align:center;
 }
+/******************************************************************************
+    Main Content Wrapper
+ ******************************************************************************/
+.main-wrapper {
+    margin: 0 auto;
+    max-width:960px;
+}
+
 /* FORMS */
 .checkbox-container {
     overflow: hidden;
